--- a/src/pages/searchpage.html
+++ b/src/pages/searchpage.html
@@ -50,7 +50,7 @@
     <main class="mt-2">
       <section>
         <div class="flex w-full justify-between border-red-600 p-4">
-          <div class="one border-blue-500 w-full flex-1">
+          <div class="one w-full flex-1 shadow-md">
             <div class="bg-gray-100 p-4">
               <div
                 class="h-[50px] flex justify-center items-center w-[50px] p-4 hover:cursor-pointer"
@@ -80,7 +80,7 @@
                         <input
                           type="text"
                           id="input-group-1"
-                          class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-3xl focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                          class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-3xl focus:ring-blue-500 focus: block w-full ps-10 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:"
                           placeholder="Copenhagen, Denmark"
                         />
                       </div>
@@ -103,7 +103,7 @@
                           datepicker
                           id="default-datepicker"
                           type="date"
-                          class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-3xl focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                          class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-3xl focus:ring-blue-500 focus: block w-full ps-10 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:"
                           placeholder="Friday, 09 December 2022"
                         />
                       </div>
@@ -126,7 +126,7 @@
                           datepicker
                           id="default-datepicker"
                           type="text"
-                          class="bg-gray-50 border rounded-3xl border-gray-300 text-gray-900 text-sm focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                          class="bg-gray-50 border rounded-3xl border-gray-300 text-gray-900 text-sm focus:ring-blue-500 focus: block w-full ps-10 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:"
                           placeholder="Monday, 12 December 2022"
                         />
                       </div>
@@ -148,7 +148,7 @@
                         <input
                           type="text"
                           id="input-group-1"
-                          class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-3xl focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                          class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-3xl focus:ring-blue-500 focus: block w-full ps-10 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:"
                           placeholder="2 adult, 1 room"
                         />
                       </div>
@@ -344,19 +344,19 @@
             <div class="p-5">
               <h1 class="font-bold">Property class</h1>
               <div class="flex mt-3 gap-3 text-center">
-                <div class="border-blue-500 p-2 w-[70px] rounded-3xl">
+                <div class="p-2 w-[70px] rounded-3xl border-2">
                   1 <i class="fa-solid fa-star"></i>
                 </div>
-                <div class="border-blue-500 p-2 w-[70px] rounded-3xl">
+                <div class="p-2 w-[70px] rounded-3xl border-2">
                   2 <i class="fa-solid fa-star"></i>
                 </div>
-                <div class="border-blue-500 p-2 w-[70px] rounded-3xl">
+                <div class="p-2 w-[70px] rounded-3xl border-2">
                   3 <i class="fa-solid fa-star"></i>
                 </div>
-                <div class="border-blue-500 p-2 w-[70px] rounded-3xl">
+                <div class="p-2 w-[70px] rounded-3xl border-2">
                   4 <i class="fa-solid fa-star"></i>
                 </div>
-                <div class="border-blue-500 p-2 w-[70px] rounded-3xl">
+                <div class="p-2 w-[70px] rounded-3xl border-2">
                   5 <i class="fa-solid fa-star"></i>
                 </div>
               </div>
@@ -447,12 +447,8 @@
 
                     <div class="flex justify-between p-2 w-full">
                       <div class="text-blue-500">
-                        <button class="px-4 py-2 rounded-3xl border-blue-500">
-                          #Hot deal
-                        </button>
-                        <button class="px-4 py-2 rounded-3xl border-blue-500">
-                          # Popular
-                        </button>
+                        <button class="px-4 py-2 rounded-3xl">#Hot deal</button>
+                        <button class="px-4 py-2 rounded-3xl"># Popular</button>
                       </div>
                       <div>
                         <button
@@ -527,12 +523,8 @@
 
                     <div class="flex justify-between p-2 w-full">
                       <div class="text-blue-500">
-                        <button class="px-4 py-2 rounded-3xl border-blue-500">
-                          #Hot deal
-                        </button>
-                        <button class="px-4 py-2 rounded-3xl border-blue-500">
-                          # Popular
-                        </button>
+                        <button class="px-4 py-2 rounded-3xl">#Hot deal</button>
+                        <button class="px-4 py-2 rounded-3xl"># Popular</button>
                       </div>
                       <div>
                         <button
@@ -607,12 +599,8 @@
 
                     <div class="flex justify-between p-2 w-full">
                       <div class="text-blue-500">
-                        <button class="px-4 py-2 rounded-3xl border-blue-500">
-                          #Hot deal
-                        </button>
-                        <button class="px-4 py-2 rounded-3xl border-blue-500">
-                          # Popular
-                        </button>
+                        <button class="px-4 py-2 rounded-3xl">#Hot deal</button>
+                        <button class="px-4 py-2 rounded-3xl"># Popular</button>
                       </div>
                       <div>
                         <button
@@ -684,12 +672,8 @@
 
                     <div class="flex justify-between p-2 w-full">
                       <div class="text-blue-500">
-                        <button class="px-4 py-2 rounded-3xl border-blue-500">
-                          #Hot deal
-                        </button>
-                        <button class="px-4 py-2 rounded-3xl border-blue-500">
-                          # Popular
-                        </button>
+                        <button class="px-4 py-2 rounded-3xl">#Hot deal</button>
+                        <button class="px-4 py-2 rounded-3xl"># Popular</button>
                       </div>
                       <div>
                         <button
