--- a/index.html
+++ b/index.html
@@ -26,11 +26,13 @@
           >
             Sign Up
           </button>
-          <button
-            class="text-white bg-blue-700 font-medium rounded-lg text-sm px-5 py-2.5"
-          >
-            Log in
-          </button>
+          <a href="/src/pages/profile.html">
+            <button
+              class="text-white bg-blue-700 font-medium rounded-lg text-sm px-5 py-2.5"
+            >
+              Log in
+            </button>
+          </a>
         </div>
       </nav>
     </header>
